2005-10-31  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstringbuffer.h:
	Don't break ABI.

	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	(gst_ffmpeg_caps_to_pixfmt):
	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
	(gst_ffmpegcsp_set_caps):
	Some more comments.
	Handle missing required caps fields better.

2005-10-31  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_event), (gst_base_audio_sink_get_offset),
	(gst_base_audio_sink_render):
	* gst-libs/gst/audio/gstringbuffer.c:
	(gst_ring_buffer_open_device), (gst_ring_buffer_close_device),
	(gst_ring_buffer_set_flushing), (gst_ring_buffer_start),
	(gst_ring_buffer_pause_unlocked), (gst_ring_buffer_pause),
	(gst_ring_buffer_stop), (wait_segment), (gst_ring_buffer_commit),
	(gst_ring_buffer_read):
	* gst-libs/gst/audio/gstringbuffer.h:
	Add flushing mode to the ringbuffer so that it in all cases does
	not try to handle more audio. This makes sure it does not try to
	block anymore when flushing and fixes a livelock.

2005-10-29  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_query_convert),
	(gst_ogg_demux_chain_peer), (gst_ogg_demux_perform_seek),
	(gst_ogg_demux_read_chain), (gst_ogg_demux_read_end_chain):
	  Explicitly check for -1 values before doing a conversion
	  and always map them to -1. (#315545)

2005-10-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/playback/gstplaybin.c: (gen_video_element):
	  first try autovideosink, then xvimagesink, then error out
	* po/POTFILES.in:
	  add translatable file
	* po/af.po:
	* po/az.po:
	* po/cs.po:
	* po/en_GB.po:
	* po/hu.po:
	* po/it.po:
	* po/nb.po:
	* po/nl.po:
	* po/or.po:
	* po/sq.po:
	* po/sr.po:
	* po/sv.po:
	* po/uk.po:
	* po/vi.po:
	  update translations

2005-10-27  Philippe Khalaf <burger at speedy dot org> 

	* gst-libs/gst/rtp/gstbasedepayload.c:
	* gst-libs/gst/rtp/gstbasedepayload.h:
	  Minor cleanups
